# rinha_de_backend_2025_rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  PREVIA_RESULTADOS.md  README.md  docker-compose.dev.yml  docker-compose.redis.yml  info.json  nginx.conf  partial-results.json  run_dev_rinha_api.sh  run_dev_rinha_worker.sh  run_local_test.sh  test.http
config/: init.sql  nginx.conf
rinha_api/: Cargo.toml  Dockerfile
rinha_api/src/: config.rs  database.rs  dto.rs  handlers.rs  main.rs  queue.rs  route.rs  serializers.rs
rinha_api/src/dto/: create_payment.rs  get_payments_summary.rs
rinha_api/src/dtos/: mod.rs  payment.rs
rinha_api/src/infra/: redis_queue.rs  sql_database.rs
rinha_api/src/queue/: queue.rs
rinha_api/src/service/: create_payment_service.rs  get_payment_summary_service.rs  get_payments_summary_service.rs  mod.rs
rinha_api/src/services/: create_payment_service.rs  get_payment_summary_service.rs  mod.rs
rinha_worker/: Cargo.toml  Dockerfile
rinha_worker/src/: config.rs  consumer.rs  database.rs  dto.rs  main.rs  queue.rs
rinha_worker/src/consumers/: mod.rs  payment_consumer.rs
rinha_worker/src/dto/: create_external_payment.rs  create_internal_payment.rs  mod.rs
rinha_worker/src/dtos/: mod.rs  payment.rs
rinha_worker/src/infra/: mod.rs  redis_queue.rs  sql_database.rs
rinha_worker/src/queue/: queue.rs
rinha_worker/src/service/: create_external_payment_service.rs  create_internal_payment_service.rs  mod.rs
rinha_worker/src/services/: create_external_payment_service.rs  create_internal_payment_service.rs  mod.rs
src/: handlers.rs  main.rs
src/config/: config.rs
src/consumers/: payment_consumer.rs
src/dtos/: mod.rs  payment.rs
src/queue/: queue.rs
src/services/: create_external_payment_service.rs  create_payment_service.rs  get_payment_summary_service.rs  mod.rs
src/types/: payment.rs
