[workspace]
resolver = "2"
members = ["rinha_api", "rinha_worker"]

[workspace.dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
redis = { version = "0.32.4", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.0.0", features = ["full"] }
