[workspace]
resolver = "2"
members = ["rinha_api", "rinha_worker"]

[workspace.dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-postgres = "0.14.1"
redis = { version = "0.32.4", features = ["tokio-comp", "connection-manager"] }
rust_decimal = { version = "1.37.2", features = ["tokio-pg"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.0.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
