[package]
name = "rinha_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = { workspace = true }
deadpool-postgres = { workspace = true }
redis = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
