[package]
name = "rinha_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
futures = "0.3.31"
redis = { workspace = true }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
